fix: theme 스티키 버튼 스크롤 이동, playfull > feature-text z-index 제거

--- a/assets/css/details/playful.css
+++ b/assets/css/details/playful.css
@@ -253,7 +253,6 @@ section.playful {
   color: #ffffff;
   display: flex;
   flex-direction: column;
-  z-index: 10;
 }
 
 .feature-text h3 {
